qas-source/daily/deployment.yml
#Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dailymutosi
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dailymutosi
  template:
    metadata:
      labels:
        app: dailymutosi
    spec:
      volumes:
        - name: pv-daily-nfs
          persistentVolumeClaim:
            claimName: pvc-daily-nfs
      containers:
        - name: dailymutosi
          image: registry.mutosi.com/daily:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 250m
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /usr/share/nginx/html
              name: pv-daily-nfs
      imagePullSecrets:
        - name: credentials-registry
      nodeSelector:
        magnum.openstack.org/nodegroup: omni-node-group-2
