qas-source/daily/nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: dailymutosi-service
  namespace: default
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    nodePort: 30649
  selector:
    app: dailymutosi
